# ai-rap-battle

./: .gitignore  README.md  pyproject.toml
evals/: runner.py
evals/eval_results/: eval_report_20250404-144054.json
evals/test_cases/: content_safety_evals.yaml  quality_assurance_evals.yaml
src/app/: main.py
src/app/api/routes/: battle.py
src/app/models/: battle.py
src/app/services/battlebot/: graph.py  prompts.py  utils.py
src/app/static/: battle-ui.html  index.html  scripts.js  styles.css
